--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -4,8 +4,10 @@ on:
   push:
     branches: [ "main" ]
 
-jobs:
+env:
+  DATE_TAG: $(date +'%Y%m%d')
 
+jobs:
   publish-docker-container:
     name: Build and Publish Docker Container
     runs-on: ubuntu-latest
@@ -43,4 +45,4 @@ jobs:
           push: true
           tags: |
             ghcr.io/eerikas/rembg-web-app:latest
-            ghcr.io/eerikas/rembg-web-app:$(date +%s)
+            ghcr.io/eerikas/rembg-web-app:${{ env.DATE_TAG }}
