Removed matrix from Docker build job

--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -8,14 +8,7 @@ jobs:
   publish-docker-container:
     name: Build and Publish Docker Container
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        platform:
-          - linux/amd64
-          # - linux/arm64
-          - linux/arm/v6
-          - linux/arm/v7
-          - linux/arm/v8
+
     steps:
       -
         name: Checkout
@@ -38,7 +31,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/amd64,linux/arm64,linux/arm
+          platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7,linux/arm/v8
           push: true
           tags: |
             ghcr.io/eerikas/rembg-web-app:latest
