--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -31,7 +31,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64,linux/arm64/v8,linux/arm/v7
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ghcr.io/eerikas/rembg-web-app:latest
